--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <title>Hello World!</title>
-    <script src="lib/cesium/Source/main.js"></script>
+    <script src="lib/cesium/Build/Cesium/Cesium.js"></script>
     <style>
         @import url(lib/cesium/Source/Widgets/CesiumWidget/CesiumWidget.css);
+
         #cesiumContainer {
             position: absolute;
             top: 0;
@@ -34,7 +35,7 @@
 <canvas id="ent-main-canvas"></canvas>
 <div id="cesiumContainer"></div>
 <script>
-    function addPointBillboards(scene, ellipsoid) {
+    function addPointBillboards(scene) {
         var canvas = document.createElement('canvas');
         canvas.width = 16;
         canvas.height = 16;
@@ -45,90 +46,76 @@
         context2D.fillStyle = 'rgb(255, 255, 255)';
         context2D.fill();
 
-        var billboards = new Cesium.BillboardCollection();
-        var textureAtlas = scene.context.createTextureAtlas({
-            image : canvas
-        });
-        billboards.textureAtlas = textureAtlas;
+        var billboards = scene.primitives.add(new Cesium.BillboardCollection());
 
         billboards.add({
-            position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-75.59777, 40.03883)),
-            color : Cesium.Color.RED,
-            scale : 0.5,
-            imageIndex : 0
+            image : canvas,
+            position: Cesium.Cartesian3.fromDegrees(-75.59777, 40.03883),
+            color: Cesium.Color.RED,
+            scale: 0.5
         });
 
         billboards.add({
-            position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-80.50, 35.14)),
-            color : Cesium.Color.BLUE,
-            imageIndex : 0
+            image : canvas,
+            position: Cesium.Cartesian3.fromDegrees(-80.50, 35.14),
+            color: Cesium.Color.BLUE
         });
 
         billboards.add({
-            position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-80.12, 25.46)),
-            color : Cesium.Color.LIME,
-            scale : 2,
-            imageIndex : 0
+            image : canvas,
+            position: Cesium.Cartesian3.fromDegrees(-80.12, 25.46),
+            color: Cesium.Color.LIME,
+            scale: 2
         });
+    }
 
+
+    function addMarkerBillboards(scene) {
+        var image = 'images/Maserati-128.png';
+        var billboards = scene.primitives.add(new Cesium.BillboardCollection());
+
+        billboards.add({
+            position: Cesium.Cartesian3.fromDegrees(-75.59777, 40.03883),
+            scale: 1,
+            image: image,
+            color: Cesium.Color.LIME
+        });
+        billboards.add({
+            position: Cesium.Cartesian3.fromDegrees(-84.0, 39.0),
+            scale: 1,
+            image: image,
+            color: new Cesium.Color(0, 0.5, 1.0, 1.0)
+        });
+        billboards.add({
+            position: Cesium.Cartesian3.fromDegrees(-70.0, 41.0),
+            scale: 1,
+            image: image,
+            color: new Cesium.Color(0.5, 0.9, 1.0, 1.0)
+        });
+        billboards.add({
+            position: Cesium.Cartesian3.fromDegrees(-73.0, 37.0),
+            scale: 1,
+            image: image,
+            color: Cesium.Color.RED
+        });
+        billboards.add({
+            position: Cesium.Cartesian3.fromDegrees(-79.0, 35.0),
+            scale: 1,
+            image: image,
+            color: Cesium.Color.YELLOW
+        });
         scene.primitives.add(billboards);
-    }
-
-
-    function addMarkerBillboards(scene, ellipsoid) {
-        var image = new Image();
-        image.onload = function() {
-            var billboards = new Cesium.BillboardCollection();
-
-            billboards.textureAtlas = scene.context.createTextureAtlas({
-                borderWidthInPixels : 0,
-                image: image
-            });
-
-            billboards.add({
-                position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-75.59777, 40.03883)),
-                scale : 1,
-                imageIndex: 0,  // PF:  Even if there are no subregions in the textureAtlas (see addMarkerBillboardsFromSprite), imageIndex is necessary for the image to display.
-                color : Cesium.Color.LIME
-            });
-            billboards.add({
-                position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-84.0, 39.0)),
-                scale : 1,
-                imageIndex: 0,
-                color : new Cesium.Color(0, 0.5, 1.0, 1.0)
-            });
-            billboards.add({
-                position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-70.0, 41.0)),
-                scale : 1,
-                imageIndex: 0,
-                color : new Cesium.Color(0.5, 0.9, 1.0, 1.0)
-            });
-            billboards.add({
-                position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-73.0, 37.0)),
-                scale : 1,
-                imageIndex: 0,
-                color : Cesium.Color.RED
-            });
-            billboards.add({
-                position : ellipsoid.cartographicToCartesian(Cesium.Cartographic.fromDegrees(-79.0, 35.0)),
-                scale : 1,
-                imageIndex: 0,
-                color : Cesium.Color.YELLOW
-            });
-            scene.primitives.add(billboards);
-        };
-        image.src = 'images/Maserati-128.png';
-    }
+    };
 
 
     var widget = new Cesium.CesiumWidget('cesiumContainer');
 
-    var ellipsoid = widget.centralBody.ellipsoid;
     var scene = widget.scene;
     var primitives = scene.primitives;
 
     primitives.removeAll();
-    addMarkerBillboards(scene, ellipsoid);
+    //addMarkerBillboards(scene);
+    addPointBillboards(scene);
 </script>
 </body>
 </html>
